# HydraAPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml
PVS_analyze/fullhtml/: index.html
PostProcessDLL/: PostProcess.cpp  PostProcess.h  PostProcessDLLTrofimm.vcxproj  pp_dll_main_win.cpp
PostProcessDLLExample/: PostProcessDLLExample.vcxproj  PostProcessDLLExample.vcxproj.filters  tm_example.cpp  tm_example.h
bin2/: z_install.txt
clew/: clew.vcxproj
corto/: CMakeLists.txt  corto.vcxproj
doc/: Doxyfile  opencl_setup_linux.md
doc_hydra_standart/: hydra_standart.tex
doc_tests/: hydra_tests.tex
doc_xml/: hydra_xml.tex
glsl/: LODBuffer.frag  LODBuffer.vert  fDeferredShading.frag  fGBuffer.frag  fLights.glsl  fQuad.glsl  fQuadDebug.frag  fSSAO.frag  fSSAOBlur.glsl  fSimple.frag  vDeferredShading.glsl  vGBuffer.glsl  vLights.glsl  vNothing.vert  vQuad.vert  vSSAO.vert  vSSAOBlur.vert  vSimple.glsl
hydra_api/: CMakeLists.txt  ClassDiagram1.cd  Doxyfile  HRExtensions.cpp  HRExtensions_Spectral.cpp  HRExtensions_Spectral.h  HRExtensions_SpectralConstants.h  HRExtensions_VectorTex.cpp  HRExtensions_VectorTex.h  HRMeshCommon.cpp  HRTextureCommon.cpp  HR_AccumImageLinux.cpp  HR_AccumImageWin.cpp  HR_HDRImage.h  HR_HDRImage4f.cpp  HR_HDRImageTool.cpp  HR_HDRImageTool.h  HydraAPI.cpp  HydraAPI.h  HydraAPI_Camera.cpp  HydraAPI_EXR.cpp  HydraAPI_FrameBuffer.cpp  HydraAPI_GBuffer.cpp  HydraAPI_Geom.cpp  HydraAPI_GeomProcessing.cpp  HydraAPI_Light.cpp  HydraAPI_LoadExistingLibrary.cpp  HydraAPI_Material.cpp  HydraAPI_Spectrum.cpp  HydraAPI_Texture.cpp  HydraAPI_TextureProcLex.cpp  HydraDriverUpdate.cpp  HydraFsUtils.cpp  HydraInternal.h  HydraInternalCommon.h  HydraLaunchProcessLinux.cpp  HydraLaunchProcessWin32.cpp  HydraLegacyUtils.cpp  HydraLegacyUtils.h  HydraNewAPI1.sln  (+73 more)
hydra_api/RTX/: 07-BasicShaders.cpp  07-BasicShaders.h  Framework.cpp  Framework.h
hydra_api/cmake/Modules/: FindFreeImage.cmake
hydra_api/data/: msdf_texture.c  sdf_texture.c
hydra_api/hydra_api_py/: CMakeLists.txt  HydraPy.cpp  hydraPyTests.py  test_utils.py
hydra_api/hydra_api_py/cmake/Modules/: FindFreeImage.cmake
hydra_api/hydra_api_py/tests/test05_load_existing/: change_00000.xml  statex_00000.xml  statex_00001.xml
hydra_api/hydra_api_py/tests/test05_load_existing/data/: chunk_00003.vsgf
hydra_api/hydra_api_py/tests/test12_cornell_box_gbuffer/: change_00000.xml  statex_00001.xml
hydra_api/hydra_api_py/tests/test12_cornell_box_gbuffer/data/: chunk_00001.vsgf
hydra_api/hydra_api_py/tests/test13_transform_instances/: change_00000.xml  statex_00001.xml
hydra_api/hydra_api_py/tests/test13_transform_instances/data/: chunk_00001.vsgf  chunk_00002.vsgf  chunk_00003.vsgf
hydra_api_python/: CMakeLists.bak  CMakeLists.txt  HydraPy.cpp  hydraPythonDemo.py  light_math.py  mesh_utils.py  test_utils.py
hydra_api_python/cmake/Modules/: FindFreeImage.cmake
ies_parser/: CMakeLists.txt  IESNA.C  ies_parser.vcxproj
main/: CMakeLists.txt  Timer.cpp  Timer.h  demo_01.cpp  demo_02.cpp  demo_02_surreal.cpp  demo_03.cpp  demo_04.cpp  demo_05.cpp  demo_06.cpp  init_gl.cpp  input.cpp  input.h  linmath.h  main.cpp  main.vcxproj  main.vcxproj.filters  mesh_utils.cpp  mesh_utils.h  simplerandom.h  test_camera_free_look_dxr.cpp  test_camera_free_look_dxr.h  test_camera_free_look_gl.cpp  test_image_processing.cpp  test_lights3.cpp  test_lights4.cpp  test_mtl5.cpp  test_mtl_adv.cpp  tests.h  tests1.cpp  tests10.cpp  tests2.cpp  tests3.cpp  tests4.cpp  tests5.cpp  tests6.cpp  tests7.cpp  tests8.cpp  tests9.cpp  testsA.cpp  (+14 more)
main/Debug/: vc141.idb
main/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  main.lastbuildstate
main/cmake/Modules/: FindFreeImage.cmake  FindGLFW3.cmake
main/data/code/: GerLicPlate.c  RusLicPlate2digitReg.c  RusLicPlate3digitReg.c  blue_water.c  blue_water2.c  dirt_ao.c  dirt_ao2.c  falloff_example.c  hexaplanar.c  hexaplanar_bump.c  hexaplanar_scalers.c  licence_plate.c  mul_tex_coord.c  mul_tex_coord2.c  noise3D.c  noise3D_mul_ao.c  noise_v2.c  normal_from_height.c  normal_from_noise.c  read_normal.c  show_ao.c  show_normals.c  simplex_noise.c  test_tex_array.c  triplanar.c  voronoi.c
main/data/ies/: 111621PN.IES  APWP3T8.IES  ies_10.ies  ies_11.ies  ies_12.ies  ies_16.ies  ies_22.ies  ies_34.ies  ies_4.ies  ies_5.ies
main/data/meshes/: lucy.vsgf  pyramid.vsgf
main/data/meshes/bottle/: model.mtl
main/data/meshes/shapenet/11/: model.mtl
main/data/textures/: 10.hdr  ELMLEAF.TGA  bigleaf3.tga  building.hdr  kitchen.hdr  wire01.hdr
main/demos/: dummy.txt
main/demos/demo_05/: spheres.pbrt
main/shaders/: 13-Shaders.hlsl
main/tests/test_1015_lib_to_merge/: change_00000.xml  statex_00001.xml
main/tests/test_1015_lib_to_merge/data/: chunk_00001.image4ub  chunk_00001.vsgf  chunk_00002.vsgf  chunk_00003.vsgf  chunk_00004.vsgf
main/tests/test_40/: change_00000.xml  change_00001.xml  statex_00001.xml  statex_00002.xml
main/tests/test_40/data/: chunk_00003.vsgf  chunk_00004.vsgf  chunk_00006.vsgf  chunk_00007.vsgf
main/tests/test_41/: change_00000.xml  statex_00001.xml
main/tests/test_41/data/: chunk_00001.image4ub  chunk_00004.image4ub  chunk_00005.vsgf  chunk_00006.vsgf  chunk_00007.vsgf  chunk_00008.vsgf
main/tests/test_42/: change_00000.xml  statex_00001.xml
main/tests/test_42/data/: chunk_00006.vsgf  chunk_00007.vsgf
main/tests/test_72/: change_00000.xml  change_00001.xml  change_00002.xml  statex_00001.xml  statex_00002.xml  statex_00003.xml
main/tests/test_72/data/: chunk_00003.vsgf
main/tests_a/test_404/: statex_00001.xml
main/tests_a/test_405/: statex_00001.xml
main/tests_a/test_405/data/: chunk_00001.vsgf  chunk_00002.vsgf  chunk_00003.vsgf
main/tests_a/test_406/: statex_00001.xml
main/tests_a/test_406/data/: chunk_00001.vsgf  chunk_00002.vsgf
main/tests_f/: dummy.txt
main/tests_images/: cleanAll.py
main/tests_images/test_40/: z_out.exr
mikktspace/: CMakeLists.txt  mikktspace.vcxproj
utils/: Camera.h  Timer.cpp  Timer.h  mesh_utils.h
(+85 files in other folders)
